# beta-gouv-assistant-civil-poc

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/assistant_civil/: config.py  main.py
backend/src/assistant_civil/models/: schemas.py
backend/src/assistant_civil/prompts/: comparison.py  structure.py  summary.py
backend/src/assistant_civil/routers/: analysis.py  upload.py
backend/src/assistant_civil/services/: llm_analyzer.py  pdf_extractor.py
docs/: architecture-poc.md  architecture-production.md
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: app-footer.tsx  app-header.tsx  dsfr-head.tsx  dsfr-provider.tsx  layout.tsx  page.tsx  start-dsfr.tsx
frontend/src/app/analyse/: page.tsx
frontend/src/components/: analysis-stepper.tsx  comparison-report.tsx  structured-view.tsx  summary-card.tsx  upload-zone.tsx
frontend/src/lib/: api.ts
frontend/src/types/: analysis.ts
test-data/: generate-pdfs.py
