[project]
name = "assistant-civil"
version = "0.1.0"
description = "Backend API pour Mon Assistant Civil - Analyse de conclusions juridiques par IA"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "pymupdf4llm>=0.0.17",
    "openai>=1.60.0",
    "pydantic-settings>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
